@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_catalog" meta_type="Plone Catalog Tool">
+  <index name="orig_id" meta_type="FieldIndex">
+    <indexed_attr value="orig_id"/>
+  </index>
+</object>
+
