@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="Plone Types Tool">
+ <object name="Patch" meta_type="Factory-based Type Information"/>
+</object>
